edit jquery in index.html

--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -26,6 +26,13 @@ a:hover {
   transition: all .5s ease;
 }
 
+/* align */
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto }
+}
+
 /* image */
 img {
   image-rendering: auto;
@@ -33,7 +40,6 @@ img {
   image-rendering: pixelated;
   object-fit: cover;
 }
-
 
 #wrapper {
   min-height: 100%;
@@ -56,7 +62,6 @@ img {
   font-family: 'Montserrat Alternates',sans-serif;
   font-size: 2em;
   color: #6200ea;
-  transition: color .5s ease;
   line-height: 84px;
   letter-spacing: .02em;
   z-index: 3;
@@ -64,7 +69,6 @@ img {
 
 .title a:hover {
   opacity: .3;
-  border-radius: 0;
   transition: all .5s;
 }
 
@@ -98,7 +102,7 @@ img {
 /*---- footer --*/
 .footer {
   background: none;
-  font-size: 1em;
+  font-size: 0.9em;
   font-family: 'Montserrat';
   padding: .9rem 0;
   width: 100%;
@@ -108,7 +112,7 @@ img {
 
 .socials {
   position: absolute;
-  left: 0;
+  left: 1em;
 }
 
 .socials a {
@@ -173,14 +177,15 @@ img {
   border: .1em solid #fff;
   opacity: .8;
   display: inline-block;
-  padding: 3em 5em;
+  padding: 2em 3em;
   height: inherit;
   transition: color 1.5s ease;
 }
 
 .index-title_style h1 {
   font-family: 'Montserrat Alternates',sans-serif;
-  font-size: 2em;
+  top: 0.5em;
+  font-size: 1.7em;
   cursor: pointer;
 }
 
@@ -225,13 +230,13 @@ img {
 
 .page-name h1 {
   font-family: 'Montserrat',sans-serif;
-  font-size: 1.7em;
+  font-size: 1.5em;
   text-align: center;
 }
 
 .page-name p {
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP',sans-serif;
-  font-size: 1.2em;
+  font-size: 1em;
   text-align: center;
 }
 
@@ -252,7 +257,7 @@ img {
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
 }
 
-.Button {
+.Meun-Button {
   position: absolute;
   left: -10em;
   top: 2.7em;
@@ -263,18 +268,18 @@ img {
   background: none;
 }
 
-.Button:hover {
+.Meun-Button:hover {
   background: none;
   opacity: .3;
 }
 
 .Menu-Bar {
   display: block;
-  left: .8em;
+  left: 0.8em;
   right: 0;
-  height: .1em;
+  height: 0.1em;
   position: absolute;
-  transition: all 200ms ease;
+  transition: all 400ms ease;
   background: #6200ea;
   transform-origin: 50% 50%;
 }
@@ -291,7 +296,7 @@ img {
   top: 2.5em;
 }
 
-.Button:hover .Menu-Bar {
+.Meun-Button:hover .Menu-Bar {
   opacity: .8;
   z-index: 10;
 }
@@ -333,6 +338,9 @@ img {
 
 .Nav-List a:hover {
   text-decoration: line-through;
+  opacity: .2;
+  cursor: pointer;
+  transition: all .8s;
 }
 
 /*-- post_list.html --*/
@@ -382,9 +390,9 @@ a.overlay {
 .category-icon {
   object-fit: contain;
   position: absolute;
-  width: 1.6em;
-  height: 1.6em;
-  margin: .8em;
+  width: 1.5em;
+  height: 1.5em;
+  margin: .64em;
 }
 
 .card-btn {
@@ -432,8 +440,8 @@ a.overlay {
 .card-title {
   padding: 0 0 10px;
   margin: 0;
-  font-size: 1.3em;
-  line-height: 27px;
+  font-size: 1.2em;
+  line-height: 1em;
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP',sans-serif;
   font-weight: 400;
 }
@@ -442,11 +450,10 @@ a.overlay {
   position: absolute;
   left: 20px;
   right: 20px;
-  bottom: px;
   margin: 0;
-  padding: 10px;
+  padding: 1em;
   color: #666c74;
-  font-size: 13px;
+  font-size: 0.8em;
   line-height: 20px;
   opacity: 0;
   transition: opacity 0.3s,transform .3s;
@@ -516,7 +523,7 @@ a.overlay {
 .post-card_btn {
   float: right;
   position: relative;
-  margin: -27.5em -4em 0em 0em;
+  margin: -23.5em -4em 0em 0em;
   width: 53px;
   height: 53px;
   border-radius: 50%;
@@ -526,9 +533,9 @@ a.overlay {
 .post-category-icon {
   object-fit: contain;
   position: absolute;
-  width: 1.9em;
-  height: 1.9em;
-  margin: 0.98em;
+  width: 1.7em;
+  height: 1.7em;
+  margin: 0.78em;
 }
 
 .post-card_main-image {
@@ -543,7 +550,7 @@ a.overlay {
   margin-left:0;
   bottom: 28px;
   color: #fff;
-  font-size: 0.9em;
+  font-size: 0.8em;
   line-height: 28px;
   text-transform: uppercase;
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
@@ -557,12 +564,12 @@ a.overlay {
   display: inline-block;
   vertical-align: middle;
   display: inline-block;
-  font-size: 1em;
+  font-size: 0.8em;
   color: #80939d;
 }
 
 .markdown-body {
-  padding: 5em 0 0 0;
+  padding: 4em 0 0 0;
   border-bottom: 2px solid #ebeeef;
 }
 
@@ -573,7 +580,7 @@ a.overlay {
 .post-footer {
   color: #80939d;
   line-height: 1em;
-  font-size: 1em;
+  font-size: 0.9em;
   padding-left: 42.5%;
 }
 
@@ -590,10 +597,17 @@ a.overlay {
 .post-share {
   border-left: 1px solid #e4e8ea;
   display: inline-block;
-  padding-left: 1.3em;
+  padding-left: 1.05em;
   padding-bottom: 0.3em;
 }
 
+.container ul {
+   list-style: none;
+}
+
+.container ul li {
+   display: inline-block;
+}
 .post-footer a {
   color: #80939d;
   text-decoration: none;
@@ -630,6 +644,7 @@ a.overlay {
   position: absolute;
   transition: all .4s ease-in-out;
 }
+
 
 .container .share-btn {
   padding: .8em;
@@ -735,22 +750,21 @@ figure.pr-card h2,figure.pr-card h3,figure.pr-card h4 {
   margin: 0;
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
   text-decoration: none;
+  padding-bottom: 0.1em;
 }
 
 figure.pr-card h2 {
   font-weight: 400;
   border-bottom: none;
-  font-size: 20px;
-  line-height: 1em;
+  font-size: 1.1em;
 }
 
 figure.pr-card h3 {
-  font-size: 14px;
+  font-size: 0.8em;
   text-transform: uppercase;
 }
 
 figure.pr-card h4 {
-  font-weight: 400;
   font-size: 1em;
 }
 
@@ -809,7 +823,7 @@ figure.pr-card:hover:after,figure.pr-card.hover:after {
 .quote-box {
   box-shadow: 0 0 2em rgba(0,0,0,0.1);
   background: #fff;
-  padding: 1em 2em;
+  padding: 0em;
   border: 6px solid #6200ea;
   border-style: double;
   color: #6200ea;
@@ -819,7 +833,7 @@ figure.pr-card:hover:after,figure.pr-card.hover:after {
 .quote-box p {
   font-style: italic;
   font-weight: 700;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 
 .about-box {
@@ -895,6 +909,10 @@ author: Zan Ilic
 available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
 */
 
+button.likes {
+  padding: 0;
+}
+
 .heart-particle-box {
   position: relative;
   width: 200px;
@@ -927,9 +945,10 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
 }
 
 #heart-counter {
-  font-weight: 700;
-  font-size: 0.8em;
-  opacity: 1;
+  font-weight: 400;
+  font-size: 0.9em;
+  opacity: 0.9;
+  color: #f55567;
 }
 
 .heart-particle {
@@ -949,8 +968,6 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
 .heart-particle-col {
   color: #f55567;
 }
-
-
 
 /* Animations */
 
@@ -1023,11 +1040,10 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
   float: left;
 }
 
-.fa-angle-left {
+.pagination_col .fa-angle-left {
   float: left;
   width: 16%;
-  margin-right: 8%;
-  margin-left: -8%;
+  margin: 2% 8% 0 -8%;
 }
 
 /*-- pagination right --*/
@@ -1048,8 +1064,8 @@ available at: http://zanilic.com/periscope-likes-tutorial-jquery-css3
   float: right;
 }
 
-.fa-angle-right {
-  margin-right: -8%;
+.pagination_col .fa-angle-right {
+  margin: 2% -8% 0 0;
   float: right;
 }
 
@@ -1118,10 +1134,10 @@ available at: https://github.com/nsept/rippleria
 /*-- tablet --*/
 @media only screen and (max-width: 550px) {
   .nav-wrap {
-    padding-left: 4em;
+    padding-left: 3.8em;
   }
 
-  .Button {
+  .Meun-Button {
     left: -8em;
   }
 
@@ -1149,6 +1165,10 @@ available at: https://github.com/nsept/rippleria
 /*-- reponsive mobile web --*/
 
 @media only screen and (max-width: 600px) {
+  .Menu-Button {
+    left: -7em;
+  }
+
   .post-footer {
     padding-left: 34%;
     padding-bottom: 2em;
@@ -1175,6 +1195,10 @@ available at: https://github.com/nsept/rippleria
 
 /* tablet */
 @media only screen and (max-width: 550px) {
+  .Menu-Button {
+    left: -9em;
+  }
+
   .post-card_btn {
     float: right;
     position: relative;
@@ -1193,6 +1217,10 @@ available at: https://github.com/nsept/rippleria
 
 /* iphone 4,5,6 */
 @media only screen and (max-width: 384px) {
+  .Meun-Button {
+    left: -7.2em;
+  }
+
   .footer {
     font-size: 0.9em;
     padding: .7rem 0;
@@ -1273,6 +1301,7 @@ available at: https://github.com/nsept/rippleria
     transform: translate(-50%,-50%);
     margin-bottom: -90px;
   }
+
   .previous {
     font-size: 0.8em;
   }
