--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -14,19 +14,10 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
-    <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet">
-=======
->>>>>>> devel
     <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/text.css' %}" rel="stylesheet" type="text/css">
-    <script>
-      function imgLoaded(img){
-      var $img = $(img);
-      $img.parent().addClass('loaded');
-      };
-    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     {% block ogtags %}
     {% endblock %}
   </head>
@@ -75,6 +66,12 @@
     <script src="{% static 'js/highlight.pack.js' %}"></script>
     <script src="{% static 'js/social.js' %}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script>
+      function imgLoaded(img){
+      var $img = $(img);
+      $img.parent().addClass('loaded');
+      };
+    </script>
     <!--google-analytics-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
