--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -410,9 +410,9 @@ code,tt {
 pre code {
   margin: 0;
   padding: 0;
-	white-space:      pre;      /* CSS 2.0 */
+	white-space:       pre-wrap;      /* CSS 2.0 */
 	white-space:      pre-wrap; /* CSS 2.1 */
-	white-space:      pre-line; /* CSS 3.0 */
+	white-space:      pre-wrap; /* CSS 3.0 */
 	white-space:     -pre-wrap; /* Opera 4-6 */
 	white-space:   -o-pre-wrap; /* Opera 7 */
 	white-space: -moz-pre-wrap; /* Mozilla */
