--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -89,6 +89,7 @@ h1,h2,h3,h4,h5,h6 {
   padding: 0;
   cursor: text;
   position: relative;
+  letter-spacing: .005em;
   font-weight: 200;
   color: #030304;
   font-family: 'Montserrat',sans-serif;
@@ -96,6 +97,12 @@ h1,h2,h3,h4,h5,h6 {
 
 .markdown-body h2:before {
    content: "# ";
+   color: #e4d3fb;
+}
+
+
+.markdown-body h3:before {
+   content: "## ";
    color: #e4d3fb;
 }
 
