--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -26,7 +26,7 @@
     <div id="wrapper">
       <header id ="header" class="nav-wrap">
         <div class="title"><a href="/">
-          Sujin Lee</a>
+          <i class="fa fa-connectdevelop fa-2.5x" aria-hidden="true"></i></a>
         </div>
         <nav class="Offscreen Nav-List">
           <a href="#" class="Meun-Button">
