--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -7,26 +7,27 @@ body {
     background: -webkit-linear-gradient(left, #48BBDE, #F47EC6);
     background: linear-gradient(to right, #48BBDE, #F47EC6);
 }
-h1 {
-    font-size: 3em;
+
+a {
     color: #fff;
+}
+
+h1 {
+    font-size: 3.4em;
+    left:0;
     text-transform: uppercase;
-    font-weight: 100;
-    text-align: center;
+    font-weight: 600;
+    text-align: left;
     margin-bottom: 15px;
 }
 h2 {
     font-size: 1.7em;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 100;
-    text-align: center;
+    font-weight: 400;
+    text-align: left;
     margin-bottom: 15px;
 }
 h3 {
     font-size: 1.7em;
-    color: #fff;
-    text-transform: uppercase;
     font-weight: 100;
     text-align: left;
     margin-bottom: 15px;
@@ -38,7 +39,9 @@ h4 {
     font-weight: 100;
     text-align: center;
     margin-bottom: 15px;
+    z-index: 9;
 }
+
 p {
     font-size: 1em;
     color: #fff;
@@ -46,7 +49,7 @@ p {
     font-weight: 100;
     text-align: center;
     margin-bottom: 15px;
-    z-index: 1;
+    z-index: 0;
 }
 .tbl-header {
     background-color: rgba(255, 255, 255, 0.1);
@@ -57,10 +60,13 @@ p {
     margin-top: 0px;
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 table {
     width: 100%;
     table-layout: fixed;
     border-radius: 10px;
+    overflow: scroll !important;
+    z-index: -1;
 }
 th {
     padding: 0.8em 0.8em;
@@ -69,6 +75,7 @@ th {
     font-size: 0.9em;
     text-transform: uppercase;
     white-space: nowrap;
+      z-index: -1;
 }
 td {
     padding: 15px;
@@ -97,44 +104,44 @@ tbody td:hover:before {
     background-color: rgba(255, 255, 255, 0.2);
     z-index: -1;
 }
+
 .footer {
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     text-align: center;
     font-weight: 200;
+    width: 100%;
+    z-index: 99;
     border-top: solid 1px rgba(255, 255, 255, 0.1);
-}
-a {
-    color: #fff;
-}
-a: hover {} section {
-    margin: 50px;
+    background: -webkit-linear-gradient(left, #48BBDE, #F47EC6);
+    background: linear-gradient(to right, #48BBDE, #F47EC6);
 }
 
 .today {
     text-align: left;
+    font-weight: 100;
+    font-size: 1.3em;
 }
 
 .city {
     background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    font-size: 12px;
     position: relative;
     width: 2em;
     padding: 5px 8px;
     border-radius: 15px;
-    z-index: 0;
+    font-weight: 400;
 }
 
-.city p {
-  z-index: 1;
-  font-weight: 600;
-  font-size: 12px;
-}
-
-/* scroll */
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 16px;
 }
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 16px rgba(255, 255, 255, 0.4);
 }
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 16px rgba(255, 255, 255, 0.4);
 }
