edit facebook og tags

--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -12,6 +12,13 @@ a {
     color: #fff;
 }
 
+#u_0_4 {
+    color: #fff;
+}
+
+.fb-like {
+    color: #fff;
+}
 h1 {
     font-size: 3.4em;
     left:0;
