--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>2016 마라톤 대회 일정 | Sujin Lee</title>
-    <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다.">
-    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="author" content="Sujin Lee">
+    <meta name="description"          content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다.">
+    <meta name="viewport"             content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="author"               content="Sujin Lee">
     <meta property="og:url"           content="http://sujinlee.me/marathon-event" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="2016 마라톤 대회 일정" />
+    <meta property="article:author"   content="https://www.facebook.com/sujiniworld" />
+    <meta property="og:title"         content="#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회" />
     <meta property="og:description"   content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다." />
     <meta property="og:image"         content="#" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
