--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -12,8 +12,14 @@ a {
 }
 
 .fb-like {
+    padding-top: 1em;
     color: #fff;
 }
+
+#u_0_3 {
+    color: #fff !important;
+}
+
 h1 {
     font-size: 3.4em;
     left: 0;
@@ -52,6 +58,7 @@ p {
     margin-bottom: 15px;
     z-index: 0;
 }
+
 .tbl-header {
     background-color: rgba(255, 255, 255, 0.1);
 }
