--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -4,15 +4,17 @@
   <head>
     <meta charset="utf-8">
     <title>#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회</title>
-    <meta name="description"          content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다.">
-    <meta name="viewport"             content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="author"               content="Sujin Lee">
-    <meta property="og:url"           content="http://www.sujinlee.me/marathon-event" />
-    <meta property="og:type"          content="website" />
-    <meta property="article:author"   content="https://www.facebook.com/sujiniworld" />
-    <meta property="og:title"         content="#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회" />
-    <meta property="og:description"   content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다." />
-    <meta property="og:image"         content="http://www.sujinlee.me/static/image/run_logo.png" />
+    <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다.">
+    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="author" content="Sujin Lee">
+    <meta property="fb:admins" content="1234" />
+    <meta property="fb:app_id" content="1081681621896558" />
+    <meta property="og:url" content="http://www.sujinlee.me/marathon-event" />
+    <meta property="og:type" content="website" />
+    <meta property="article:author" content="https://www.facebook.com/sujiniworld" />
+    <meta property="og:title" content="#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회" />
+    <meta property="og:description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다." />
+    <meta property="og:image" content="http://www.sujinlee.me/static/image/run_logo.png" />
     <link rel="icon" type="image/png" href="{% static 'image/run_logo.png' %}">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
@@ -33,6 +35,7 @@
     <script src="{% static 'js/myrun.js' %}"></script>
   </head>
   <body>
+    <!--facebook plugin-->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -158,5 +161,14 @@
         <a href="https://github.com/sujinleeme/official-website/tree/master/myrun">[github]</a></h4>
       </div>
     </div>
+    <!--google-analytics-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-53782262-2', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
