--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -15,12 +15,22 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
-    <link href="//fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/text.css' %}" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <meta property="fb:app_id" content="1081681621896558" />
+    <meta property="og:site_name" content="Sujin Lee" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="ko" />
+    <meta property="og:title" content="Sujin Lee" />
+    <meta property="og:author" content="https://www.facebook.com/sujiniworld" />
     {% block ogtags %}
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The connectivist" />
+    <meta property="og:image"content="http://www.sujinlee.me/static/image/background/profile-about.png" />
+    <meta property="og:url" content="http://sujinlee.me/" />
     {% endblock %}
   </head>
   <body itemscope itemtype="http://schema.org/Product">
@@ -67,7 +77,9 @@
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/highlight.pack.js' %}"></script>
     <script src="{% static 'js/social.js' %}"></script>
+    <!--Code Syntax -->
     <script>hljs.initHighlightingOnLoad();</script>
+    <!--Image Loading -->
     <script>
       function imgLoaded(img){
       var $img = $(img);
@@ -82,6 +94,44 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-53782262-2', 'auto');
       ga('send', 'pageview');
+    </script>
+    <!--Facebook SDK -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1081681621896558',
+          xfbml      : true,
+          version    : 'v2.6'
+        });
+      };
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!--Facebook Open Graph -->
+    <script>
+      function fbshare() {
+          FB.ui({
+                  app_id: '1081681621896558'
+                  method: 'share_open_graph',
+                  action_type: 'og.shares',
+                  mobile_iframe: true,
+                  action_properties: JSON.stringify({
+                      object: 'http://sujinlee.me/blog/{{post.slug }}/',
+                      }
+                  })
+                  function(response) {
+                    if (response && !response.error_message) {
+                      alert('Posting completed.');
+                    } else {
+                      alert('Error while posting.');
+                    }
+              });
+      }
     </script>
     {% endblock %}
   </body>
