--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -5,13 +5,10 @@
 <title>{{ post.title }}</title>
 {% endblock %}
 {% block ogtags %}
-<meta property="og:type" content="article" />
-<meta property="og:locale" content="en_US" />
 <meta property="og:title" content="{{ post.title }}" />
-<meta property="article:author" content="https://www.facebook.com/sujiniworld" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image"content="http://sujinlee.me/{{ post.image.url }}" />
-<meta property="og:url" content="http://sujinlee.me/blog/{{post.slug }}" />
+<meta property="og:url" content="http://sujinlee.me/blog/{{post.slug }}/" />
 {% endblock %}
 {% block content %}
 <section class="page-name">
@@ -63,12 +60,12 @@
             <a class="facebook share-btn" href="#"
               target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
-            <a class="twitter customer share share-btn"
+            <a class="twitter share-btn"
               href="http://twitter.com/share?url=http://sujinlee.me/blog/{{ post.slug }}
-              &amp;text={{ post.title }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
+              &amp;text={{ post.title }} http://sujinlee.me/blog/{{ post.slug }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
               target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
-            <a class="google_plus customer share share-btn"
+            <a class="google_plus share-btn"
               href="https://plus.google.com/share?url=http://sujinlee.me/blog/{{ post.slug }}"
               target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
@@ -110,16 +107,20 @@
   // facebook share
     function fbshare() {
         FB.ui({
+                app_id: '1081681621896558'
                 method: 'share_open_graph',
                 action_type: 'og.shares',
+                mobile_iframe: true,
                 action_properties: JSON.stringify({
-                    object: {
-                        'og:url': 'http://sujinlee.me/blog/{{post.slug }}',
-                        'og:title': '{{ post.title }}',
-                        'og:description': '{{ post.summary }}',
-                        'og:image': 'http://sujinlee.me/{{ post.image.url }}'
+                    object: 'http://sujinlee.me/blog/{{post.slug }}/',
                     }
                 })
+                function(response) {
+                  if (response && !response.error_message) {
+                    alert('Posting completed.');
+                  } else {
+                    alert('Error while posting.');
+                  }
             });
     }
 </script>
